--- a/Class 6 Homework.ipynb
+++ b/Class 6 Homework.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "    Simulate an arXiv search or return a dummy passage for the given query.\n",
     "    In a real system, this might query the arXiv API and extract a summary.\n",
     "    \"\"\"\n",
-    "    # Example placeholder implementation:\n",
+    "    # returning dummy text to avoid rate limits\n",
     "    return f\"[arXiv snippet related to '{query}']\"\n",
     "\n",
     "def calculate(expression: str) -> str:\n",
@@ -80,7 +80,7 @@
     "    \"\"\"\n",
     "    try:\n",
     "        from sympy import sympify\n",
-    "        result = sympify(expression)  # use sympy for safe evaluation\n",
+    "        result = sympify(expression) \n",
     "        return str(result)\n",
     "    except Exception as e:\n",
     "        return f\"Error: {e}\""
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,10 +179,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
